# sc-internal

./: .gitignore  CMakeLists.txt  Makefile  README.md  check-update.cpp  check_update.cpp  ffi-type.lisp  internal-server.lisp  link.cpp  link.lisp  sc-internal.asd  scsynth_add.c  scsynth_add.cpp
